[gd_scene load_steps=4 format=3 uid="uid://blw4tcw1rw81c"]

[ext_resource type="Script" path="res://scenes/lore.gd" id="1_k3qeo"]
[ext_resource type="Texture2D" uid="uid://dupsvgqw03cid" path="res://assets/Lore/0.png" id="2_mghyj"]
[ext_resource type="AudioStream" uid="uid://duad1bjt6ra12" path="res://assets/music/fairytale.mp3" id="3_vc6b8"]

[node name="Lore" type="CanvasLayer"]
script = ExtResource("1_k3qeo")

[node name="Slide" type="TextureRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("2_mghyj")
expand_mode = 2

[node name="Panel" type="Panel" parent="."]
offset_left = -1.0
offset_top = 381.0
offset_right = 799.0
offset_bottom = 599.0

[node name="Legend" type="RichTextLabel" parent="."]
offset_left = 47.0
offset_top = 417.0
offset_right = 747.0
offset_bottom = 577.0
theme_override_font_sizes/normal_font_size = 32
text = "Once upon a time there was a hero. His name was Saulo. Saulo was facing a terrible fate: Ensino m√©dio brasileiro."

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="TimeBeforeChanging" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vc6b8")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimeBeforeChanging" to="." method="_on_time_before_changing_timeout"]
